# delaunator-cpp

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES  bench_results  delaunatorConfig.cmake.in  fetch-includes.sh
bench/: benchmark_out.csv  run.cpp
examples/: basic.cpp  triangulate_geojson.cpp  utils.hpp
examples/triangulate/: main.cpp
generate-reference-triangles/: README.md  index.js  package-lock.json  package.json
include/: delaunator-header-only.hpp  delaunator.cpp  delaunator.hpp
scripts/: clang-tidy.sh  coverage.sh  format.sh
src/: benchmark.cpp  delaunator-test.cpp  delaunator.cpp  delaunator.h  json-helpers.cpp  json-helpers.h  main.cpp  triangulate.cpp
test/: CMakeLists.txt  delaunator.test.cpp  test_json_validate.cpp  test_utils.hpp
test-files/: map-25p-epsg-3857.geojson  map-25p.geojson  map-mercator.geojson  map.geojson  playgrounds-1356-triangles.json
test-header-only/: delaunator.test.cpp
test/src/: delaunator-test.cpp  triangle_indices.cpp  triangle_indices.h  vertex_points.cpp  vertex_points.h
test/test-files/: osm-nodes-45331-triangles.json
